finished assembly algorithms
still need to finish analysis, but have the main aspects solve

--- a/Overlaps_myAnalysis.ipynb
+++ b/Overlaps_myAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16c97337",
+   "id": "b344cde9",
    "metadata": {},
    "source": [
     "# Overlaps and Edit Distance - An Analysis"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d9ce59d",
+   "id": "7cde0179",
    "metadata": {},
    "source": [
     "\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "21800605",
+   "id": "e105d264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "25b1a72c",
+   "id": "45bb0a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "bbe65971",
+   "id": "246ea428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "358aa199",
+   "id": "781d5fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4fb0b941",
+   "id": "6c990283",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3974c97b",
+   "id": "6cda7525",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "8366d71d",
+   "id": "49194609",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b80ead85",
+   "id": "24207994",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "7ec9467b",
+   "id": "49762b7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "04124a09",
+   "id": "7b7557e1",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "59a1b844",
+   "id": "fb71d7e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2efaf469",
+   "id": "d0ff3485",
    "metadata": {},
    "source": [
     "Visualizing the new matrix with a numpy matrix, simply for a clean view. "
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2a44af55",
+   "id": "639d097c",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4ee9483f",
+   "id": "6bbb37ea",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fdd878a",
+   "id": "b974740a",
    "metadata": {},
    "source": [
     "___\n",
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2ef1fcd6",
+   "id": "14913d7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b55b11b3",
+   "id": "6ff13c80",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a1fed844",
+   "id": "499ae289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9355a504",
+   "id": "c94d3e09",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "71c78027",
+   "id": "460a46cd",
    "metadata": {},
    "outputs": [
     {
@@ -493,14 +493,14 @@
     "        \n",
     "len ( nodeSets )\n",
     "\n",
-    "#refers to reads with at least one overlap with another read\n",
+    "# refers to reads with at least one overlap with another read\n",
     "?nodeSets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "203899fd",
+   "id": "25e8d051",
    "metadata": {},
    "outputs": [
     {
@@ -538,14 +538,15 @@
     "all of the reads more quickly by just querying the length-k\n",
     "kmer which contains all values (or entire sequence reads).\n",
     "\n",
-    "If we were checking one by one, every kmer key, the runtime would be extremely long.\n",
+    "If we were checking one by one, every kmer key, the run time would \n",
+    "be extremely long.\n",
     "\n",
     "For the current read in the list of reads, we pull the length-k \n",
     "suffix from the read.\n",
     "\n",
     "Every key is unique, so that specific k-mer has all the reads we need.\n",
-    "We would then have to cycle one by one, through only that set to append the full length \n",
-    "sequence reads to the \"pairs\" list.\n",
+    "We would then have to cycle one by one, through only that set to append \n",
+    "the full length sequence reads to the \"pairs\" list.\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -574,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b3c94b0",
+   "id": "d2e581e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -596,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
